[package]
name = "chasm-contract"
description = "Cosmwasm contract responsible for managing chasm private keys"
version = "0.1.0"
authors = ["Conor Patrick <cpatrick@jumptrading.com>", "Nicolas <nicolas@jumpcrypto.com>"]
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# test-util = ["chasm/test-util", "chasm/standalone"]
test-util = ["async-trait", "tonic", "rand", "tracing"]

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
cw-storage-plus = "0.13.4"
thiserror = { version = "1.0.23" }
schemars = "0.8"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
serde_repr = "0.1.8"
base64 = "0.13"
# chasm = { path = "../chasm", default-features = false }
chasm-types = { path = "../chasm-types", default-features = false }
# dev dependencies copied to allow using testing related functions by other crates.
async-trait = { version = "0.1", default-features = false, optional = true }
tonic = { version = "0.7", features = ["codegen", "prost"], default-features = false, optional = true }
rand = { version = "0.8", optional = true }
tracing = { version = "0.1.33", optional = true }

[dev-dependencies]
async-trait = { version = "0.1", default-features = false }
tonic = { version = "0.7", features = ["codegen", "prost"], default-features = false }
rand = { version = "0.8" }
tracing = { version = "0.1.33" }
# chasm = { path = "../chasm", features = ["test-util"] }
cosmwasm-schema = { version = "1.0.0-beta" }
k256 = "0.10.4"
env_logger = "0.9.0"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
test-log = { version = "0.2.11", features = ["trace"] }
tokio = {version = "1.17.0", features = ["sync", "rt", "macros", "time", "rt-multi-thread"], default-features = false}

[build-dependencies]
tonic-build = "0.7"
vergen = { version = "7", default-features = false, features = ["build", "git", "rustc"] }
