[package]
name = "chasm-types"
authors = ["Nicolas <nicolas@jumpcrypto.com>", "Conor Patrick <cpatrick@jumptrading.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"


[dependencies]
abscissa_core = {version = "0.6.0", default-features = false, features = ["application"]}
arc-swap = "1"
async-trait = { version = "0.1", default-features = false }
base64 = "0.13"
base64-serde = "0.6"
bincode = "1"
clap = { version = "3.1", features = ["derive"] }
cosmrs = { version = "0.7.1" }
eyre = "0.6.8"
futures = "0.3"
hex = { version = "0.4", features = ["serde"] }
# hex_fmt = "0.3"
once_cell = "1"
prost = "0.10"
prost-types = "0.10"
rand_core5 = { package = "rand_core", version = "0.5", features = ["getrandom"] }
rand_core = { package = "rand_core", version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
secrecy = "0.8"
serde = { version = "1", features = ["serde_derive"] }
serde_with = { version = "1" }
sled = "0.34"
tendermint = "=0.23.7"
tendermint-rpc = { version = "=0.23.7", features = ["http-client", "websocket-client"], optional = true }
thiserror = "1"
toml = "0.5"
tonic = {version = "0.7", features = ["codegen", "prost"], default-features = false }
uuid = { version = "0.8.2", features = ["v4"] }

# Crypto
age = "0.7"
bip32 = "0.3"
ecdsa = { version = "0.13", features = ["dev"] }
elliptic-curve = { version = "0.11", features = ["arithmetic", "pem"] }
generic-array = "0.14"
hmac = "0.11"
k256 = { git = "https://github.com/nickray/elliptic-curves.git", branch = "taproot-10", features = ["schnorr", "serde"] }
p256 = "0.10"
pkcs8 = { version = "0.8", features = ["alloc"] }
sha2 = "0.9"
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4.1", features = ["serde"] }
ed25519-dalek = "1"
x25519-dalek = { version = "1", features = ["serde"] }


# JSON-RPC stuff
jsonrpsee = { version = "0.11.0", features = ["macros", "server"], default-features = false, optional = true }
serde_json = "1"
metrics-exporter-prometheus = {version = "0.9.0", optional = true}
metrics = "0.18.1"
schemars = "0.8"
tokio = {version = "1.17.0", features = ["sync", "rt", "macros", "time"], default-features = false}
tracing = "0.1.33"

dialoguer = "0.10.0"
ctrlc = {version = "3.2.2", optional = true}
anyhow = "1.0.57"
libp2p = { version = "0.44.0", default-features = false, features = ["gossipsub", "kad", "mplex", "noise"]}
tempdir = {version = "0.3.7", optional = true}

[dev-dependencies]
abscissa_core = { version = "0.6", features = ["testing"] }
once_cell = "1"
rand = "0.8"
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }
tempfile = "3.3.0"
hex-literal = "0.3.4"
jsonrpsee = { version = "0.11.0", features = ["macros", "client", "server"] }
tracing-test = "0.2.3"

[build-dependencies]
tonic-build = "0.7"
vergen = { version = "7", default-features = false, features = ["build", "git", "rustc"] }

[features]
default = ["standalone"]
# optional dependencies for when running chasm as standalone program that may not work on other platforms
standalone = ["libp2p/tcp-tokio", "cosmrs/rpc", "tonic/transport", "tendermint-rpc", "jsonrpsee", "metrics-exporter-prometheus", "ctrlc", "tempdir"]
# When testing chasm, this enables a test-only feature that enables chasm to be stopped mid-test.
test-util = []

